infrastructure/03-apps/ai/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: ai
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - ai.foobarbaz.fr
      secretName: ai-open-webui-tls
  rules:
    - host: ai.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
